added the filtered rooms and back drop issue resolved

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-  <script src="https://cdn.jsdeliver.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bs-stepper/dist/css/bs-stepper.min.css"></script>
-  <link rel="stylesheet" href="bs-stepper.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
+
+  <!-- <link rel="stylesheet" href="https://cdn.jsdeliver.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"> -->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bs-stepper/dist/css/bs-stepper.min.css"></script> -->
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bs-stepper/dist/css/bs-stepper.min.css">
+
+  <!-- <link rel="stylesheet" href="bs-stepper.min.css"> -->
 </head>
 <body>
   <app-root></app-root>
